# api_games

./: Cargo.toml
.cargo/: config.toml
scripts/: new_bin.sh
src/: action.rs  bank.rs  char.rs  character.rs  errors.rs  events.rs  gameinfo.rs  main.rs  map.rs  monster.rs  move.rs  movement.rs  responsecode.rs  routines.rs  server.rs  task.rs  utils.rs
src/action/: bank.rs  equipment.rs  fight.rs  movement.rs
src/gameinfo/: items.rs  map.rs  monster.rs  resources.rs
src/server/: creation.rs  request.rs  status.rs
