[package]
name = "artifact"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
chrono = "0.4.38"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
secrecy = "0.8.0"
log = "0.4.22"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
